# llm-requesty

./: README.md  llm_requesty.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: conftest.py  test_llm_requesty.py
tests/cassettes/test_llm_requesty/: test_image_prompt.yaml  test_llm_models.yaml  test_prompt.yaml  test_requesty_models_command.yaml  test_requesty_models_json.yaml
