[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-requesty"
version = "0.0.1"
description = "LLM plugin for models hosted by requesty"
readme = "README.md"
authors = [{name = "Rajashekar Chintalapati"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "ai", "requesty", "language-models", "plugin"]
dependencies = [
    "llm>=0.23",
    "httpx",
    "openai>=1.57.0",
]

[project.urls]
Homepage = "https://github.com/rajashekar/llm-requesty"
Changelog = "https://github.com/rajashekar/llm-requesty/releases"
Issues = "https://github.com/rajashekar/llm-requesty/issues"
CI = "https://github.com/rajashekar/llm-requesty/actions"

[project.entry-points.llm]
requesty = "llm_requesty"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "inline-snapshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]